[gd_scene load_steps=17 format=2]

[ext_resource path="res://producto/scripts/Jugador.gd" type="Script" id=1]
[ext_resource path="res://producto/assets/img/jugador/skins/Yellow/body.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/jugador/skins/Yellow/ak-47.png" type="Texture" id=3]
[ext_resource path="res://producto/scripts/Arma.gd" type="Script" id=4]
[ext_resource path="res://producto/assets/img/enemigos/Sombra.png" type="Texture" id=6]
[ext_resource path="res://producto/assets/img/jugador/explosion_lvl_up.png" type="Texture" id=12]
[ext_resource path="res://producto/assets/music/sounds/disparo.wav" type="AudioStream" id=15]
[ext_resource path="res://producto/assets/music/sounds/reload.wav" type="AudioStream" id=16]
[ext_resource path="res://producto/assets/scenes/Interfaz.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 33 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Jugador_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Jugador_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=11]
resource_name = "move"
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Jugador_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=5]
resource_name = "LVL_UP"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 7, 9, 8, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 53.0848

[node name="Jugador" type="KinematicBody2D"]
position = Vector2( 541, 296 )
script = ExtResource( 1 )

[node name="Interfaz" parent="." instance=ExtResource( 17 )]

[node name="Sombra" type="Sprite" parent="."]
position = Vector2( 2, 23 )
scale = Vector2( 1.61905, 1.3913 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -3 )
shape = SubResource( 1 )

[node name="Jugador_Sprite" type="Sprite" parent="."]
position = Vector2( 3, -0.125 )
z_index = 1
texture = ExtResource( 2 )
hframes = 6
vframes = 2
frame = 1

[node name="AnimationPlayer_body" type="AnimationPlayer" parent="."]
playback_speed = 1.3
anims/RESET = SubResource( 9 )
anims/idle = SubResource( 10 )
anims/move = SubResource( 11 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="Arma" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1
script = ExtResource( 4 )

[node name="Arma_Sprite" type="Sprite" parent="Arma"]
position = Vector2( 36, -2 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 3 )

[node name="Position_arma" type="Position2D" parent="Arma"]
position = Vector2( 76, -2 )
scale = Vector2( 2, 2 )

[node name="disparo" type="AudioStreamPlayer" parent="Arma"]
stream = ExtResource( 15 )

[node name="reload" type="AudioStreamPlayer" parent="Arma"]
stream = ExtResource( 16 )
pitch_scale = 1.36

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="Lvp_up" type="Sprite" parent="."]
position = Vector2( -5.99998, -14 )
scale = Vector2( 2.09375, 2.39583 )
z_index = 2
texture = ExtResource( 12 )
hframes = 18
frame = 1

[node name="Anim_lvl_up" type="AnimationPlayer" parent="Lvp_up"]
anims/LVL_UP = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="area_recoleccion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_recoleccion"]
position = Vector2( 0, -4 )
shape = SubResource( 8 )

[node name="Position2D2" type="Position2D" parent="."]

[connection signal="actualiza_interfaz" from="." to="Interfaz" method="_on_Jugador_actualiza_interfaz"]
[connection signal="player_ready" from="." to="Interfaz" method="_on_Jugador_player_ready"]
[connection signal="animation_finished" from="Lvp_up/Anim_lvl_up" to="." method="_on_Anim_lvl_up_animation_finished"]
